[gd_scene load_steps=8 format=2]

[ext_resource path="res://Imagens/mapaAlagoas.png" type="Texture" id=1]
[ext_resource path="res://Imagens/pixilart-drawing (1).png" type="Texture" id=2]
[ext_resource path="res://Codigos/HUDS/escolherMapa.gd" type="Script" id=3]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="escolherMapa" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="moldura" type="Sprite" parent="."]
scale = Vector2( 9.6, 9.31035 )
texture = ExtResource( 2 )
centered = false

[node name="MapaAlagoas" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.960417, 0.931481 )
texture = ExtResource( 1 )

[node name="canionsDourados" type="Label" parent="MapaAlagoas"]
margin_left = -761.128
margin_top = -173.917
margin_right = -361.128
margin_bottom = -140.917
theme = SubResource( 3 )
text = "canions dourados"
align = 1
valign = 1
uppercase = true

[node name="maceio" type="Label" parent="MapaAlagoas"]
margin_left = 313.406
margin_top = -144.93
margin_right = 713.406
margin_bottom = -111.93
theme = SubResource( 3 )
text = "MACEIO"
align = 1
valign = 1
uppercase = true

[node name="botaoCanions" type="Button" parent="."]
margin_left = 367.0
margin_top = 419.0
margin_right = 449.0
margin_bottom = 503.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="botaoMaceio" type="Button" parent="."]
margin_left = 1415.0
margin_top = 446.0
margin_right = 1497.0
margin_bottom = 530.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[connection signal="pressed" from="botaoCanions" to="." method="_on_botaoCanions_pressed"]
[connection signal="pressed" from="botaoMaceio" to="." method="_on_botaoMaceio_pressed"]
